# squish2d

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: bench.rs  demo.rs
src/: blob.rs  contacts.rs  geom.rs  lib.rs  relations.rs  solver.rs
tests/: basic.rs
